--- a/app/src/main/res/layout/content_resource_main.xml
+++ b/app/src/main/res/layout/content_resource_main.xml
@@ -12,10 +12,11 @@
     tools:context="com.example.delia_grimes.charterconnect.ResourceMain"
     tools:showIn="@layout/activity_resource_main">
 
+
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:rowCount="4"
+        android:rowCount="5"
         android:columnCount="2"
         android:id="@+id/gridLayout"
         android:layout_centerHorizontal="true"
@@ -68,8 +69,6 @@
             android:layout_row="3" />
 
         <Button
-            android:layout_width="120dp"
-            android:layout_height="50dp"
             android:text="Events"
             android:id="@+id/eventsButton"
             android:onClick="switchToEvents"
@@ -79,8 +78,6 @@
             android:background="@android:color/holo_green_light" />
 
         <Button
-            android:layout_width="120dp"
-            android:layout_height="50dp"
             android:text="Resources"
             android:id="@+id/resourcesButton"
             android:layout_column="0"
@@ -91,15 +88,22 @@
             android:singleLine="false" />
 
 
-
     </GridLayout>
 
-    <Button
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:text="Add Resource"
-        android:id="@+id/button"
-        android:onClick="addResource"
-        android:background="@android:color/holo_green_light" />
+    <GridLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
+        android:layout_centerHorizontal="true">
+
+        <Button
+            android:text="Add Resource"
+            android:id="@+id/button"
+            android:onClick="addResource"
+            android:background="@android:color/holo_green_light" />
+    </GridLayout>
+
 
 </RelativeLayout>
