--- a/app/src/main/res/layout/content_resource_main.xml
+++ b/app/src/main/res/layout/content_resource_main.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:id="@+id/relativeLayout"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.delia_grimes.charterconnect.ResourceMain"
     tools:showIn="@layout/activity_resource_main">
@@ -94,9 +95,9 @@
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:id="@+id/addResourceGridLayout"
+        >
 
         <Button
             android:text="@string/add_resource"
