--- a/app/src/main/res/layout/content_start_screen.xml
+++ b/app/src/main/res/layout/content_start_screen.xml
@@ -27,7 +27,7 @@
         <Button
             android:layout_width="120dp"
             android:layout_height="50dp"
-            android:text="Resources"
+            android:text="@string/resources"
             android:id="@+id/resourcesButton"
             android:background="@android:color/holo_green_light"
             android:onClick="switchToResource"/>
@@ -35,7 +35,7 @@
         <Button
             android:layout_width="120dp"
             android:layout_height="50dp"
-            android:text="Events"
+            android:text="@string/events"
             android:id="@+id/eventsButton"
             android:background="@color/pinkColor"
             android:onClick="switchToEvents"/>
