--- a/app/src/main/res/layout/content_add_resource.xml
+++ b/app/src/main/res/layout/content_add_resource.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Add Resource"
+            android:text="@string/add_resource"
             android:id="@+id/addResource"
             android:layout_gravity="center_horizontal" />
 
@@ -31,7 +31,7 @@
             android:id="@+id/editCategory"
             android:layout_gravity="center_horizontal"
             android:autoText="true"
-            android:hint="Category" />
+            android:hint="@string/category" />
 
         <EditText
             android:layout_width="match_parent"
@@ -39,7 +39,7 @@
             android:id="@+id/editResourceName"
             android:layout_gravity="center_horizontal"
             android:autoText="true"
-            android:hint="Name of Resource/Set" />
+            android:hint="@string/name_of_resource" />
 
         <EditText
             android:layout_width="match_parent"
@@ -47,7 +47,7 @@
             android:id="@+id/editUnits"
             android:inputType="number"
             android:layout_gravity="center_horizontal"
-            android:hint="Number of Units" />
+            android:hint="@string/number_of_units" />
 
         <EditText
             android:layout_width="match_parent"
@@ -55,7 +55,7 @@
             android:inputType="date"
             android:ems="10"
             android:id="@+id/editDateAvailable"
-            android:hint="Date Available" />
+            android:hint="@string/date_available" />
 
         <EditText
             android:layout_width="match_parent"
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/editDescription"
             android:layout_gravity="center_horizontal"
-            android:hint="Description" />
+            android:hint="@string/description" />
 
         <EditText
             android:layout_width="match_parent"
@@ -77,7 +77,7 @@
             android:ems="10"
             android:id="@+id/editContactEmail"
             android:layout_gravity="center_horizontal"
-            android:hint="Contact Email" />
+            android:hint="@string/contact_email" />
 
         <Button
             android:layout_width="120dp"
