--- a/app/src/main/res/layout/content_events_main.xml
+++ b/app/src/main/res/layout/content_events_main.xml
@@ -27,7 +27,7 @@
         <Button
             android:layout_width="120dp"
             android:layout_height="50dp"
-            android:text="Events"
+            android:text="@string/events"
             android:id="@+id/eventsButton"
             android:layout_row="0"
             android:layout_column="1"
@@ -37,7 +37,7 @@
         <Button
             android:layout_width="120dp"
             android:layout_height="50dp"
-            android:text="Resources"
+            android:text="@string/resources"
             android:id="@+id/resourcesButton"
             android:onClick="switchToResource"
             android:layout_column="0"
@@ -51,7 +51,7 @@
     <Button
         android:layout_width="120dp"
         android:layout_height="50dp"
-        android:text="Add Event"
+        android:text="@string/add_event"
         android:id="@+id/addEvent"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
