--- a/app/src/main/res/layout/content_add_resource.xml
+++ b/app/src/main/res/layout/content_add_resource.xml
@@ -25,13 +25,11 @@
             android:id="@+id/addResource"
             android:layout_gravity="center_horizontal" />
 
-        <EditText
+        <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editCategory"
-            android:layout_gravity="center_horizontal"
-            android:autoText="true"
-            android:hint="@string/category" />
+            android:id="@+id/categorySpinner"
+            android:entries="@array/resource_types"/>
 
         <EditText
             android:layout_width="match_parent"
