--- a/app/src/main/res/layout/content_resource_main.xml
+++ b/app/src/main/res/layout/content_resource_main.xml
@@ -17,57 +17,12 @@
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:rowCount="5"
+        android:rowCount="1"
         android:columnCount="2"
         android:id="@+id/gridLayout"
-        android:layout_centerHorizontal="true"
+        android:layout_marginTop="23dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp">
-
-        <Button
-            android:text="@string/scienceButton"
-            android:id="@+id/scienceButton"
-            android:layout_row="2"
-            android:layout_column="1"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:background="@color/pinkColor" />
-
-        <Button
-            android:text="@string/makerButton"
-            android:id="@+id/makerButton"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:layout_gravity="center"
-            android:background="@color/pinkColor" />
-
-
-
-        <Button
-            android:text="@string/artButton"
-            android:id="@+id/artButton"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:layout_gravity="center"
-            android:background="@color/pinkColor" />
-
-        <Button
-            android:text="@string/booksButton"
-            android:id="@+id/booksButton"
-            android:onClick="switchToCategory"
-            android:layout_row="2"
-            android:layout_column="0"
-            android:layout_gravity="center"
-            android:background="@color/pinkColor"
-            android:layout_marginTop="10dp" />
-
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="125dp"
-            android:id="@+id/textView"
-            android:layout_row="3" />
+        android:layout_centerHorizontal="true">
 
         <Button
             android:text="@string/events"
@@ -83,7 +38,7 @@
             android:id="@+id/resourcesButton"
             android:layout_column="0"
             android:layout_row="0"
-            android:layout_marginBottom="80dp"
+            android:layout_marginBottom="20dp"
             android:layout_gravity="right"
             android:background="@android:color/holo_green_dark"
             android:singleLine="false" />
@@ -91,20 +46,67 @@
 
     </GridLayout>
 
+
     <GridLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:id="@+id/addResourceGridLayout"
-        >
+
+        android:rowCount="2"
+        android:columnCount="2"
+        android:layout_centerInParent="true"
+        android:id="@+id/gridLayout2">
 
         <Button
-            android:text="@string/add_resource"
-            android:id="@+id/button"
-            android:onClick="addResource"
-            android:background="@android:color/holo_green_light" />
+            android:text="@string/scienceButton"
+            android:id="@+id/scienceButton"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@color/pinkColor" />
+
+        <Button
+            android:text="@string/makerButton"
+            android:id="@+id/makerButton"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:layout_gravity="center"
+            android:background="@color/pinkColor" />
+
+
+        <Button
+            android:text="@string/artButton"
+            android:id="@+id/artButton"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_gravity="center"
+            android:background="@color/pinkColor" />
+
+        <Button
+            android:text="@string/booksButton"
+            android:id="@+id/booksButton"
+            android:onClick="switchToCategory"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_gravity="center"
+            android:background="@color/pinkColor"
+            android:layout_marginTop="10dp" />
+
     </GridLayout>
+
+
+    <Button
+        android:text="@string/add_resource"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:id="@+id/button"
+        android:onClick="addResource"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@android:color/holo_green_light" />
+
 
 
 </RelativeLayout>
