--- a/app/src/main/res/layout/content_resource_category.xml
+++ b/app/src/main/res/layout/content_resource_category.xml
@@ -15,5 +15,5 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listView" />
+        android:id="@+id/resourceCategoryList" />
 </RelativeLayout>
