--- a/app/src/main/res/layout/content_add_event.xml
+++ b/app/src/main/res/layout/content_add_event.xml
@@ -12,18 +12,15 @@
     tools:context="com.example.delia_grimes.charterconnect.AddEvent"
     tools:showIn="@layout/activity_add_event">
 
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fillViewport="true">
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/add_event"
-            android:id="@+id/addEvent"
-            android:layout_gravity="center_horizontal" />
 
         <EditText
             android:layout_width="match_parent"
@@ -122,4 +119,5 @@
 
 
     </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
