--- a/app/src/main/res/layout/content_add_resource.xml
+++ b/app/src/main/res/layout/content_add_resource.xml
@@ -12,18 +12,15 @@
     tools:context="com.example.delia_grimes.charterconnect.AddResource"
     tools:showIn="@layout/activity_add_resource">
 
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fillViewport="true">
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/add_resource"
-            android:id="@+id/addResource"
-            android:layout_gravity="center_horizontal" />
 
         <Spinner
             android:layout_width="match_parent"
@@ -87,7 +84,7 @@
             android:layout_marginTop="10dp" />
 
     </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
 
 
-    <!-- populate with title with "add resource" or "add event" -->
