Changed the title of the Events Screen to nothing and added a horizontal scoll view to the resource main screen.

--- a/app/src/main/res/layout/content_resource_main.xml
+++ b/app/src/main/res/layout/content_resource_main.xml
@@ -45,6 +45,11 @@
 
     </GridLayout>
 
+<HorizontalScrollView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true"
+    android:layout_centerInParent="true">
 
     <GridLayout
         android:orientation="vertical"
@@ -93,7 +98,7 @@
             android:layout_marginTop="10dp" />
 
     </GridLayout>
-
+</HorizontalScrollView>
 
     <Button
         android:text="@string/add_resource"
