--- a/app/src/main/res/layout/content_events_main.xml
+++ b/app/src/main/res/layout/content_events_main.xml
@@ -19,14 +19,12 @@
         android:rowCount="1"
         android:columnCount="2"
         android:id="@+id/gridLayout"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="10dp">
 
 
         <Button
-            android:layout_width="120dp"
-            android:layout_height="50dp"
             android:text="@string/events"
             android:id="@+id/eventsButton"
             android:layout_row="0"
@@ -35,8 +33,6 @@
             android:background="@android:color/holo_green_dark" />
 
         <Button
-            android:layout_width="120dp"
-            android:layout_height="50dp"
             android:text="@string/resources"
             android:id="@+id/resourcesButton"
             android:onClick="switchToResource"
@@ -48,16 +44,6 @@
 
     </GridLayout>
 
-    <Button
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:text="@string/add_event"
-        android:id="@+id/addEvent"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
-        android:onClick="addEvent"
-        android:background="@android:color/holo_green_light" />
 
     <ListView
         android:layout_width="wrap_content"
@@ -67,6 +53,17 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
         android:layout_below="@+id/gridLayout" />
+
+    <Button
+        android:text="@string/add_event"
+        android:id="@+id/addEvent"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:onClick="addEvent"
+        android:layout_marginBottom="16dp"
+        android:background="@android:color/holo_green_light" />
 
 
 </RelativeLayout>
