--- a/app/src/main/res/layout/content_resource_main.xml
+++ b/app/src/main/res/layout/content_resource_main.xml
@@ -20,6 +20,7 @@
         android:rowCount="1"
         android:columnCount="2"
         android:id="@+id/gridLayout"
+        android:layout_marginTop="16dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true">
 
@@ -170,6 +171,7 @@
         android:onClick="addResource"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
         android:background="@android:color/holo_green_light" />
 
 
