--- a/app/src/main/res/layout/content_school_profile.xml
+++ b/app/src/main/res/layout/content_school_profile.xml
@@ -15,10 +15,11 @@
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:rowCount="2"
+        android:rowCount="4"
         android:columnCount="2"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <TextView
             android:text="TextView"
@@ -26,8 +27,38 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_columnSpan="2"
+            android:layout_marginBottom="10dp"
             android:gravity="center"
             android:id="@+id/textView" />
+
+        <ImageView
+            android:layout_width="88dp"
+            android:layout_height="157dp"
+            app:srcCompat="@drawable/person_logo"
+            android:layout_marginTop="10dp"
+            android:layout_rowSpan="3"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_margin="10dp"
+            android:id="@+id/imageView2" />
+
+        <Button
+            android:layout_row="1"
+            android:layout_column="1"
+            android:text="URL: "
+            android:layout_gravity="fill_horizontal"/>
+
+        <Button
+            android:layout_row="2"
+            android:layout_column="1"
+            android:text="Address: "
+            android:layout_width="match_parent"/>
+
+        <Button
+            android:layout_row="3"
+            android:layout_column="1"
+            android:text="Phone Number: "
+            android:layout_width="match_parent"/>
 
     </GridLayout>
 
