--- a/app/src/main/res/layout/content_resource_main.xml
+++ b/app/src/main/res/layout/content_resource_main.xml
@@ -158,6 +158,7 @@
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:onClick="switchToSchoolProfile"
             android:background="@color/pinkColor" />
 
     </GridLayout>
