--- a/app/src/main/res/layout/content_school_profile.xml
+++ b/app/src/main/res/layout/content_school_profile.xml
@@ -15,7 +15,7 @@
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:rowCount="4"
+        android:rowCount="6"
         android:columnCount="2"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -29,36 +29,68 @@
             android:layout_columnSpan="2"
             android:layout_marginBottom="10dp"
             android:gravity="center"
-            android:id="@+id/textView" />
-
-        <ImageView
-            android:layout_width="88dp"
-            android:layout_height="157dp"
-            app:srcCompat="@drawable/person_logo"
-            android:layout_marginTop="10dp"
-            android:layout_rowSpan="3"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:layout_margin="10dp"
-            android:id="@+id/imageView2" />
+            android:id="@+id/textView"
+            android:layout_row="0"
+            android:layout_column="0" />
 
         <Button
             android:layout_row="1"
             android:layout_column="1"
             android:text="URL: "
-            android:layout_gravity="fill_horizontal"/>
+            android:layout_gravity="fill_horizontal"
+            android:layout_width="wrap_content"
+            android:gravity="start"
+            style="?android:attr/borderlessButtonStyle" />
+
+        <ImageView
+            android:layout_width="88dp"
+            android:layout_height="157dp"
+            android:src="@drawable/person_logo"
+            android:layout_marginTop="10dp"
+            android:layout_rowSpan="4"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_margin="10dp"
+            android:id="@+id/imageView2" />
+
+        <TextView
+            android:text="Grades: "
+            android:layout_row="4"
+            android:layout_column="1"
+            android:layout_gravity="fill_horizontal"
+            android:layout_width="wrap_content"
+            android:gravity="start"
+            style="?android:attr/borderlessButtonStyle"
+            android:id="@+id/textView2" />
+
+        <TextView
+            android:text="Mission Statement: "
+            android:layout_row="5"
+            android:layout_column="0"
+            android:layout_columnSpan="2"
+            android:layout_gravity="fill_horizontal"
+            android:layout_width="wrap_content"
+            android:gravity="start"
+            style="?android:attr/borderlessButtonStyle"
+            android:id="@+id/textView3" />
 
         <Button
             android:layout_row="2"
             android:layout_column="1"
             android:text="Address: "
-            android:layout_width="match_parent"/>
+            android:layout_gravity="fill_horizontal"
+            android:layout_width="wrap_content"
+            android:gravity="start"
+            style="?android:attr/borderlessButtonStyle"/>
 
         <Button
             android:layout_row="3"
             android:layout_column="1"
             android:text="Phone Number: "
-            android:layout_width="match_parent"/>
+            android:layout_gravity="fill_horizontal"
+            android:layout_width="wrap_content"
+            android:gravity="start"
+            style="?android:attr/borderlessButtonStyle"/>
 
     </GridLayout>
 
