--- a/app/src/main/res/layout/content_add_event.xml
+++ b/app/src/main/res/layout/content_add_event.xml
@@ -20,7 +20,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <EditText
             android:layout_width="match_parent"
@@ -28,6 +28,12 @@
             android:id="@+id/eventName"
             android:layout_gravity="center_horizontal"
             android:hint="@string/event_name"/>
+
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/hostSchoolsSpinner">
+        </Spinner>
 
         <EditText
             android:layout_width="match_parent"
