--- a/app/src/main/res/menu/view_resource.xml
+++ b/app/src/main/res/menu/view_resource.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ViewResource">
+
+    <item android:id="@+id/action_edit"
+        android:title="@string/app_name"
+        android:icon="@drawable/ic"
+        app:showAsAction="ifRoom" />
 
 </menu>
