--- a/app/src/main/res/menu/view_resource.xml
+++ b/app/src/main/res/menu/view_resource.xml
@@ -6,7 +6,8 @@
 
     <item android:id="@+id/action_edit"
         android:title="@string/app_name"
-        android:icon="@drawable/ic"
         app:showAsAction="ifRoom" />
 
 </menu>
+
+    <!-- android:icon="@drawable/ic_" -->
